<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChooseLevel"
    android:background="@color/nightBlue">

    <TextView
        android:id="@+id/chooseYourLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/choose_your_level"
        android:textColor="@color/lyricsHangman"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/beginnerLevel"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/begginer_button_background"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/beginner_button"
        android:textColor="@color/lyricsHangman"
        app:layout_constraintBottom_toTopOf="@+id/beginnerContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseYourLevel" />

    <TextView
        android:id="@+id/beginnerContent"
        android:layout_width="350dp"
        android:layout_height="125dp"
        android:background="@drawable/hangman_instructions_text_background"
        android:padding="10dp"
        android:fontFamily="@font/luckiest_guy"
        android:textColor="@color/lyricsHangman"
        android:text="@string/beginner_content"
        app:layout_constraintBottom_toTopOf="@+id/intermediaryLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beginnerLevel" />

    <Button
        android:id="@+id/intermediaryLevel"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/intermediary_button_background"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/intermediary_button"
        android:textColor="@color/lyricsHangman"
        app:layout_constraintBottom_toTopOf="@+id/intermediaryContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beginnerContent" />

    <TextView
        android:id="@+id/intermediaryContent"
        android:layout_width="350dp"
        android:layout_height="125dp"
        android:background="@drawable/hangman_instructions_text_background"
        android:padding="10dp"
        android:fontFamily="@font/luckiest_guy"
        android:textColor="@color/lyricsHangman"
        android:text="@string/beginner_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intermediaryLevel"
        app:layout_constraintBottom_toTopOf="@+id/advancedLevel" />

    <Button
        android:id="@+id/advancedLevel"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/advanced_button_background"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/advanced_button"
        android:textColor="@color/lyricsHangman"
        app:layout_constraintBottom_toTopOf="@+id/advancedContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intermediaryContent" />

    <TextView
        android:id="@+id/advancedContent"
        android:layout_width="350dp"
        android:layout_height="125dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/hangman_instructions_text_background"
        android:padding="10dp"
        android:fontFamily="@font/luckiest_guy"
        android:textColor="@color/lyricsHangman"
        android:text="@string/advanced_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advancedLevel" />


</androidx.constraintlayout.widget.ConstraintLayout>